--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
-  "dependencies": {
+  "name": "mapty-project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Ruqayyah",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
     "parcel-bundler": "^1.12.5"
   }
 }
